# filesync-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: db.rs  main.rs  popup.rs  state.rs  webdav.rs
src/views/: popup.rs
