[package]
name = "filesync-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
redb = "3.1.0"
reqwest_dav = "0.3.1"
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"] }
chrono = "0.4.43"
bimap = "0.6.3"
postcard = {version = "1.1.3", features = ["alloc"] }
typed-path = "0.12.2"