[package]
name = "filesync-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bimap = "0.6.3"
chrono = "0.4.43"
iced = "0.14.0"
postcard = { version = "1.1.3", features = ["alloc"] }
redb = "3.1.0"
reqwest_dav = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["fs", "rt-multi-thread"] }
typed-path = "0.12.2"